Minor updates for deprecations and general code changes